--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Copiar código
 
 @media (min-width: 400px) {
     .planos-container {
-        flex-direction: row; /* Exibe os planos em linha nas telas maiores */
+        ; /* Exibe os planos em linha nas telas maiores */
         flex-wrap: wrap; /* Permite que os planos quebrem linha se necessário, em vez de sair da tela */
         justify-content: center; /* Centraliza os planos horizontalmente no container */
     }
