--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@ section {
 #depoimentos h2,
 #revenda h2,
 #suporte h2,
-#planos-cliente h2 {
+#planos-cliente h2, 
+#planos-iptv h2  {
     font-size: 36px; /* Define o tamanho da fonte dos títulos como 36 pixels */
     margin-bottom: 30px; /* Adiciona um espaço de 30 pixels abaixo do título */
     position: relative; /* Define a posição como relativa para poder adicionar pseudo-elementos com posição absoluta */
@@ -218,7 +219,8 @@ Copiar código
 #depoimentos h2::after,
 #revenda h2::after,
 #suporte h2::after,
-#planos-cliente h2::after {
+#planos-cliente h2::after,
+#planos-iptv h2::after {
     content: ''; /* Cria um pseudo-elemento vazio */
     width: 50px; /* Define a largura do pseudo-elemento como 50 pixels */
     height: 4px; /* Define a altura do pseudo-elemento como 4 pixels */
@@ -236,7 +238,8 @@ Copiar código
 #depoimentos h2::after,
 #revenda h2::after,
 #suporte h2::after,
-#planos-cliente h2::after {
+#planos-cliente h2::after,
+#planos-iptv h2::after {
     content: ''; /* Cria um pseudo-elemento vazio */
     width: 50px; /* Define a largura do pseudo-elemento como 50 pixels */
     height: 4px; /* Define a altura do pseudo-elemento como 4 pixels */
@@ -542,7 +545,8 @@ footer p {
             <h1>compre já sua assinatura ORIGINAL</h1>
             <p>O melhor em entretenimento de streaming premium original das melhores plataformas, se for revender lucro de 100% a 250%</p>
             <a href="#planos">preços para revenda</a><br><br><br><br>
-            <a href="#planos-cliente">preços para cliente</a>
+            <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
+            <a href="#planos-iptv">Teste IPTV</a>
         </div>
     </section>
 
