--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ footer p {
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
             <a href="#planos-iptv">Teste IPTV</a>
         </div>
-    </section>
+    </section><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <!-- Seção de Planos -->
     <section id="planos">
