--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@ footer p {
             <p>O melhor em entretenimento de streaming premium original das melhores plataformas, se for revender lucro de 100% a 250%</p>
             <a href="#planos">preços para revenda</a><br><br><br><br>
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
-            <a href="#planos-iptv">Teste IPTV</a>
+            <a href="#planos-iptv">Teste IPTV</a><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
-    </section><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </section>
 
     <!-- Seção de Planos -->
     <section id="planos">
