--- a/index.html
+++ b/index.html
@@ -546,11 +546,11 @@ footer p {
             <p>O melhor em entretenimento de streaming premium original das melhores plataformas, se for revender lucro de 100% a 250%</p>
             <a href="#planos">preços para revenda</a><br><br><br><br>
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
-            <a href="#planos-iptv">Teste IPTV</a><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <a href="#planos-iptv">Teste IPTV</a>
         </div>
     </section>
 
-    <!-- Seção de Planos -->
+    <!-- Seção de Planos --><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <section id="planos">
         <h2>TABELA DE REVENDA</h2>
         <div class="planos-container">
