--- a/index.html
+++ b/index.html
@@ -549,8 +549,11 @@ footer p {
             <a href="#planos-iptv">Teste IPTV</a>
         </div>
     </section>
+    <footer>
+    <p>Todos os direitos reservados &copy; 2019-2024 word assine e vpn word net</p>
+    </footer>
 
-    <!-- Seção de Planos --><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Seção de Planos --><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <section id="planos">
         <h2>TABELA DE REVENDA</h2>
         <div class="planos-container">
