--- a/index.html
+++ b/index.html
@@ -548,10 +548,11 @@ footer p {
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
             <a href="#planos-iptv">Teste IPTV</a>
         </div>
-    </section>
-    <footer>
+        <footer><br><br><br><br>
     <p>Todos os direitos reservados &copy; 2019-2024 word assine e vpn word net</p>
-    </footer>
+        </footer>
+    </section>
+    
 
     <!-- Seção de Planos --><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <section id="planos">
