--- a/index.html
+++ b/index.html
@@ -546,13 +546,14 @@ footer p {
             <p>O melhor em entretenimento de streaming premium original das melhores plataformas, se for revender lucro de 100% a 250%</p>
             <a href="#planos">preços para revenda</a><br><br><br><br>
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
-            <a href="#planos-iptv">Teste IPTV</a>
+            <a href="#planos-iptv">Teste IPTV</a><br><br><br><br><br><br><br><br><br><br><br><br>
+            <footer>
+    <p>Todos os direitos reservados &copy; 2019-2024 word assine e vpn word net</p>
+            </footer>
         </div>
               
     </section>
-    <footer><br><br><br><br>
-    <p>Todos os direitos reservados &copy; 2019-2024 word assine e vpn word net</p>
-    </footer>
+    
 
     <!-- Seção de Planos --><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <section id="planos">
