--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@ footer p {
             <p>O melhor em entretenimento de streaming premium original das melhores plataformas, se for revender lucro de 100% a 250%</p>
             <a href="#planos">preços para revenda</a><br><br><br><br>
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
-            <a href="#planos-iptv">Teste IPTV</a><br><br><br><br><br><br><br><br><br><br><br><br>
-            <footer>
+            <a href="#planos-iptv">Teste IPTV</a>
+            <footer><br><br><br><br><br><br><br><br><br><br><br><br>
     <p>Todos os direitos reservados &copy; 2019-2024 word assine e vpn word net</p>
             </footer>
         </div>
