--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ footer p {
             <a href="#planos">preços para revenda</a><br><br><br><br>
             <a href="#planos-cliente">preços para cliente</a><br><br><br><br>
             <a href="#planos-iptv">Teste IPTV</a>
-            <footer><br><br><br><br><br><br><br><br><br><br><br><br>
+            <footer>
     <p>Todos os direitos reservados &copy; 2019-2024 word assine e vpn word net</p>
             </footer>
         </div>
